--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100vh;
     text-align: center;
