--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 60%;
+    width: 60vw;
 }
 
 h1 {
